--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page de Base</title>
-    <img src="Ayoub viz.png.jpg" alt="nombre de followers par genre" width="300" height="200">
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +27,7 @@
             padding: 1rem 0;
             position: fixed;
             width: 100%;
-            bottom: 0;
+            bottom: 0; 
         }
     </style>
 </head>
@@ -40,6 +38,7 @@
     <main>
         <iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fsinger%20%3Fdate_of_birth%20%3Fsocial_media_followers%20%3Fbirth_name%20%3Fsex_or_gender%20%3Fsex_or_genderLabel%20WHERE%20%7B%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cmul%2Cen%22.%20%7D%0A%20%20%3Fsinger%20wdt%3AP106%20wd%3AQ177220%3B%0A%20%20%20%20wdt%3AP27%20wd%3AQ142%3B%0A%20%20%20%20wdt%3AP569%20%3Fdate_of_birth%3B%0A%20%20%20%20wdt%3AP8687%20%3Fsocial_media_followers%3B%0A%20%20%20%20wdt%3AP1477%20%3Fbirth_name%3B%0A%20%20%20%20wdt%3AP21%20%3Fsex_or_gender.%0A%20%20%0A%7D" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe> 
         <p>La correction de mon travail de lundi soir.</p>
+        <img src="Ayoub viz.png" alt="nombre de followers par genre" width="1200" height="500">
     </main>
     <footer>
         <p>&copy; 2025 - Mon Site Web</p>
